--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ figure,
 blockquote,
 dl,
 dd {
-  margin-block-end: 0;
+  margin: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
@@ -70,6 +70,81 @@ select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+body {
+  font-family: "Manrope", sans-serif;
+  font-size: 0.8125rem;
+  background-color: hsl(210, 46%, 95%);
+}
+
+main {
+  min-height: 100dvh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  background-color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 1.5rem;
+}
+
+.text-wrapper {
+  padding: 10% 9% 5% 9%;
+}
+
+.card__bg-img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+}
+
+.card__heading {
+  font-size: 1rem;
+  color: hsl(217, 19%, 35%);
+  margin-bottom: 1rem;
+}
+
+.card__text {
+  color: hsl(214, 17%, 51%);
+  margin-bottom: 2rem;
+}
+
+.author {
+  display: flex;
+}
+.author .author__avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+.author .author__name {
+  color: hsl(217, 19%, 35%);
+  font-weight: 700;
+}
+.author .author__date {
+  color: hsl(212, 23%, 69%);
+  font-weight: 400;
+}
+
+.social {
+  display: none;
+}
+
+.share-btn {
+  margin-left: 25%;
+  border: none;
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  background-color: hsl(210, 46%, 95%);
+}
+.share-btn img {
+  padding-left: 5px;
+  width: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
