--- a/styles/main.scss
+++ b/styles/main.scss
@@ -43,6 +43,7 @@ main {
 
 .author {
     display: flex;
+    align-items: center;
 
     .author__avatar {
         width: 40px;
@@ -60,22 +61,22 @@ main {
         color: hsl(212, 23%, 69%);
         font-weight: 400;
     }
+
+    .share-btn {
+        margin-left: 20%;
+        border: none;
+        border-radius: 50%;
+        width: 35px;
+        height: 35px;
+        background-color: hsl(210, 46%, 95%);
+
+        img {
+            padding-left: 5px;
+            width: 20px;
+        }
+    }
 }
 
 .social {
     display: none;
-}
-
-.share-btn {
-    margin-left: 25%;
-    border: none;
-    border-radius: 50%;
-    width: 35px;
-    height: 35px;
-    background-color: hsl(210, 46%, 95%);
-
-    img {
-        padding-left: 5px;
-        width: 20px;
-    }
 }
