--- a/styles/main.scss
+++ b/styles/main.scss
@@ -39,7 +39,7 @@ main {
 .card__text {
     color: hsl(214, 17%, 51%);
     margin-bottom: 2rem;
-    margin-right: .8rem;
+    margin-right: 0.8rem;
 }
 
 .author {
