fixed bottom part of the card

--- a/styles/style.css
+++ b/styles/style.css
@@ -113,9 +113,14 @@ main {
   margin-right: 0.8rem;
 }
 
+.author-wrapper {
+  display: flex;
+}
+
 .author {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .author .author__avatar {
   width: 40px;
