--- a/styles/main.scss
+++ b/styles/main.scss
@@ -75,10 +75,21 @@ main {
         width: 33px;
         height: 33px;
         background-color: hsl(210, 46%, 95%);
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+            background-color: hsl(214, 17%, 51%);
+
+            img {
+                filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(0deg) brightness(150%) contrast(100%);
+            }
+        }
 
         img {
             padding-left: 4px;
             width: 20px;
+            transition: all 0.3s ease-in-out;
         }
     }
 }
