0000000im done with this

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -94,6 +94,21 @@ main {
     }
 }
 
-.social {
+.socials {
     display: none;
+    background-color: hsl(217, 19%, 35%);
+    justify-content: space-around;
+
+    a {
+        margin: 7% 0.5rem;
+    }
+
+    .socials__share-link {
+        text-decoration: none;
+        color: hsl(212, 23%, 69%);
+        letter-spacing: 5px;
+        margin-left: 2rem;
+    }
+
+    .socials__pinterest {}
 }
