--- a/styles/main.scss
+++ b/styles/main.scss
@@ -87,6 +87,7 @@ main {
         }
 
         img {
+            pointer-events: none;
             padding-left: 4px;
             width: 20px;
             transition: all 0.3s ease-in-out;
