--- a/styles/style.css
+++ b/styles/style.css
@@ -153,6 +153,7 @@ main {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(0deg) brightness(150%) contrast(100%);
 }
 .author .share-btn img {
+  pointer-events: none;
   padding-left: 4px;
   width: 20px;
   transition: all 0.3s ease-in-out;
