made mobile share button to finally work

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -68,7 +68,7 @@ main {
         font-weight: 400;
     }
 
-    .share-btn {
+    .open-menu-btn {
         margin-left: 20%;
         border: none;
         border-radius: 50%;
