--- a/styles/main.scss
+++ b/styles/main.scss
@@ -99,6 +99,7 @@ main {
     display: none;
     background-color: hsl(217, 19%, 35%);
     justify-content: space-around;
+    align-items: center;
 
     a {
         margin: 7% 0.5rem;
@@ -112,4 +113,29 @@ main {
     }
 
     .socials__pinterest {}
+
+    .close-menu-btn {
+        border: none;
+        border-radius: 50%;
+        width: 33px;
+        height: 33px;
+        background-color: hsl(210, 46%, 95%);
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+            background-color: hsl(214, 17%, 51%);
+
+            img {
+                filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(0deg) brightness(150%) contrast(100%);
+            }
+        }
+
+        img {
+            pointer-events: none;
+            padding-left: 4px;
+            width: 20px;
+            transition: all 0.3s ease-in-out;
+        }
+    }
 }
