--- a/styles/style.css
+++ b/styles/style.css
@@ -163,6 +163,7 @@ main {
   display: none;
   background-color: hsl(217, 19%, 35%);
   justify-content: space-around;
+  align-items: center;
 }
 .socials a {
   margin: 7% 0.5rem;
@@ -172,6 +173,27 @@ main {
   color: hsl(212, 23%, 69%);
   letter-spacing: 5px;
   margin-left: 2rem;
+}
+.socials .close-menu-btn {
+  border: none;
+  border-radius: 50%;
+  width: 33px;
+  height: 33px;
+  background-color: hsl(210, 46%, 95%);
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.socials .close-menu-btn:hover {
+  background-color: hsl(214, 17%, 51%);
+}
+.socials .close-menu-btn:hover img {
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(0deg) brightness(150%) contrast(100%);
+}
+.socials .close-menu-btn img {
+  pointer-events: none;
+  padding-left: 4px;
+  width: 20px;
+  transition: all 0.3s ease-in-out;
 }
 
 /*# sourceMappingURL=style.css.map */
