--- a/styles/main.scss
+++ b/styles/main.scss
@@ -26,7 +26,7 @@ main {
 
 .card__bg-img {
     width: 100%;
-    height: 180px;
+    height: 200px;
     object-fit: cover;
 }
 
@@ -38,7 +38,6 @@ main {
 
 .card__text {
     color: hsl(214, 17%, 51%);
-    margin-bottom: 2rem;
     margin-right: 0.8rem;
 }
 
@@ -50,6 +49,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 7% 2rem;
 
     .author__avatar {
         width: 40px;
@@ -100,6 +100,7 @@ main {
     background-color: hsl(217, 19%, 35%);
     justify-content: space-around;
     align-items: center;
+    padding: 0.5rem 0;
 
     a {
         margin: 7% 0.5rem;
@@ -109,7 +110,12 @@ main {
         text-decoration: none;
         color: hsl(212, 23%, 69%);
         letter-spacing: 5px;
-        margin-left: 2rem;
+        margin-left: 1rem;
+    }
+
+    .socials__links--wrapper {
+        display: flex;
+        align-items: center;
     }
 
     .close-menu-btn {
@@ -117,23 +123,18 @@ main {
         border-radius: 50%;
         width: 33px;
         height: 33px;
-        background-color: hsl(210, 46%, 95%);
         cursor: pointer;
         transition: all 0.3s ease-in-out;
-
-        &:hover {
-            background-color: hsl(214, 17%, 51%);
-
-            img {
-                filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(0deg) brightness(150%) contrast(100%);
-            }
-        }
+        background-color: hsl(214, 17%, 51%);
+        margin-right: 1rem;
 
         img {
             pointer-events: none;
             padding-left: 4px;
             width: 20px;
             transition: all 0.3s ease-in-out;
+            filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(0deg) brightness(150%) contrast(100%);
+
         }
     }
 }
