--- a/styles/style.css
+++ b/styles/style.css
@@ -97,7 +97,7 @@ main {
 
 .card__bg-img {
   width: 100%;
-  height: 180px;
+  height: 200px;
   object-fit: cover;
 }
 
@@ -109,7 +109,6 @@ main {
 
 .card__text {
   color: hsl(214, 17%, 51%);
-  margin-bottom: 2rem;
   margin-right: 0.8rem;
 }
 
@@ -121,6 +120,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 7% 2rem;
 }
 .author .author__avatar {
   width: 40px;
@@ -164,6 +164,7 @@ main {
   background-color: hsl(217, 19%, 35%);
   justify-content: space-around;
   align-items: center;
+  padding: 0.5rem 0;
 }
 .socials a {
   margin: 7% 0.5rem;
@@ -172,28 +173,28 @@ main {
   text-decoration: none;
   color: hsl(212, 23%, 69%);
   letter-spacing: 5px;
-  margin-left: 2rem;
+  margin-left: 1rem;
+}
+.socials .socials__links--wrapper {
+  display: flex;
+  align-items: center;
 }
 .socials .close-menu-btn {
   border: none;
   border-radius: 50%;
   width: 33px;
   height: 33px;
-  background-color: hsl(210, 46%, 95%);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-}
-.socials .close-menu-btn:hover {
   background-color: hsl(214, 17%, 51%);
-}
-.socials .close-menu-btn:hover img {
-  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(0deg) brightness(150%) contrast(100%);
+  margin-right: 1rem;
 }
 .socials .close-menu-btn img {
   pointer-events: none;
   padding-left: 4px;
   width: 20px;
   transition: all 0.3s ease-in-out;
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(0deg) brightness(150%) contrast(100%);
 }
 
 /*# sourceMappingURL=style.css.map */
