--- a/styles/style.css
+++ b/styles/style.css
@@ -197,4 +197,38 @@ main {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(0deg) brightness(150%) contrast(100%);
 }
 
+@media (min-width: 700px) {
+  .card {
+    display: flex;
+    max-width: 770px;
+    height: 300px;
+    position: relative;
+  }
+  .card .card__bg-img {
+    height: 300px;
+    max-width: 300px;
+  }
+  .card .card__heading {
+    font-size: 1.4rem;
+    margin-bottom: 0.6rem;
+  }
+  .card .card__text {
+    font-size: 0.85rem;
+  }
+  .card .text-wrapper {
+    padding-bottom: 0;
+    padding-top: 5%;
+  }
+  .card .author {
+    font-size: 0.9rem;
+    margin-top: 5%;
+    margin-right: 12%;
+  }
+  .card .socials {
+    position: absolute;
+    border-radius: 10px;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 83%, 56% 83%, 50% 100%, 44% 84%, 0 83%);
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
