--- a/styles/style.css
+++ b/styles/style.css
@@ -224,13 +224,17 @@ main {
     margin-top: 5%;
     margin-right: 12%;
   }
+  .card .desktop-wrapper {
+    position: relative;
+    overflow: visible;
+  }
   .card .socials {
     position: absolute;
     padding-left: 1rem;
     padding-right: 1rem;
     border-radius: 10px;
-    left: 600px;
-    top: 48%;
+    left: 50%;
+    top: 50%;
   }
   .card .socials::before {
     content: "";
@@ -244,8 +248,8 @@ main {
   }
   .card .close-menu-btn {
     position: absolute;
-    top: 91px;
-    left: 99px;
+    top: 130%;
+    left: 43%;
   }
 }
 
