upload to frontend mentor

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -139,7 +139,7 @@ main {
     }
 }
 
-@media (min-width: 700px) {
+@media (min-width: 800px) {
     .card {
         display: flex;
         max-width: 770px;
@@ -182,13 +182,14 @@ main {
             padding-right: 1rem;
             border-radius: 10px;
             left: 50%;
-            top: 50%;
+            top: 47%;
         }
 
         .socials::before {
             content: '';
             position: absolute;
             top: 50px;
+            right: 43.5px;
             width: 0;
             height: 0;
             border-left: 25px solid transparent;
@@ -199,7 +200,7 @@ main {
         .close-menu-btn {
             position: absolute;
             top: 130%;
-            left: 43%;
+            left: 63%;
         }
     }
 }
